--- a/OruBloggen/OruBloggen.csproj
+++ b/OruBloggen/OruBloggen.csproj
@@ -280,6 +280,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Post\Post.cshtml" />
     <Content Include="Views\Admin\Posts.cshtml" />
+    <Content Include="Views\Admin\PostDetails.cshtml" />
+    <Content Include="Views\Admin\DeletePost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
