--- a/OruBloggen/OruBloggen.csproj
+++ b/OruBloggen/OruBloggen.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\201902051358068_AddPOsition.Designer.cs">
       <DependentUpon>201902051358068_AddPOsition.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902121112217_Notification.cs" />
+    <Compile Include="Migrations\201902121112217_Notification.Designer.cs">
+      <DependentUpon>201902121112217_Notification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AddPostViewModels.cs" />
@@ -220,6 +224,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MeetingViewModels.cs" />
     <Compile Include="Models\MessageViewModel.cs" />
+    <Compile Include="Models\NotificationModels.cs" />
     <Compile Include="Models\OruBloggenDbContext.cs" />
     <Compile Include="Models\PostReportModels.cs" />
     <Compile Include="Models\PostViewModels.cs" />
@@ -339,6 +344,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902051358068_AddPOsition.resx">
       <DependentUpon>201902051358068_AddPOsition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902121112217_Notification.resx">
+      <DependentUpon>201902121112217_Notification.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
