--- a/OruBloggen/packages.config
+++ b/OruBloggen/packages.config
@@ -19,6 +19,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
@@ -35,5 +37,9 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net461" />
+  <package id="Twilio" version="5.26.0" targetFramework="net461" />
+  <package id="Twilio.AspNet.Common" version="5.20.1" targetFramework="net461" />
+  <package id="Twilio.AspNet.Mvc" version="5.20.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
