--- a/OruBloggen/packages.config
+++ b/OruBloggen/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Ical.Net" version="2.2.3" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net461" />
