--- a/OruBloggen/OruBloggen.csproj
+++ b/OruBloggen/OruBloggen.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\NotificationController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\ProfilePageController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ReportPostController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -251,6 +252,7 @@
     <Compile Include="Models\PostReportModels.cs" />
     <Compile Include="Models\PostViewModels.cs" />
     <Compile Include="Models\ProfilePageViewModel.cs" />
+    <Compile Include="Models\ProjectFilesModels.cs" />
     <Compile Include="Models\UserMeetingModels.cs" />
     <Compile Include="Models\MeetingModels.cs" />
     <Compile Include="Models\MessageModels.cs" />
@@ -332,9 +334,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Meeting\Meeting.cshtml" />
-    <Content Include="Views\Admin\Posts.cshtml" />
-    <Content Include="Views\Admin\PostDetails.cshtml" />
-    <Content Include="Views\Admin\DeletePost.cshtml" />
+    <Content Include="Views\Admin\AdminPosts.cshtml" />
     <Content Include="Views\Admin\AllUsers.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\ProfilePage\ShowInfo.cshtml" />
@@ -350,11 +350,13 @@
     <Content Include="Views\Message\RespondToMessage.cshtml" />
     <Content Include="Views\Admin\AdminCategories.cshtml" />
     <Content Include="Views\Admin\AdminNews.cshtml" />
+    <Content Include="Views\Project\Project.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Images\" />
     <Folder Include="PostFiles\" />
+    <Folder Include="ProjectFiles\" />
     <Folder Include="Views\ChooseNotification\" />
     <Folder Include="Views\Image\" />
     <Folder Include="Views\Notification\" />
