--- a/OruBloggen/OruBloggen.csproj
+++ b/OruBloggen/OruBloggen.csproj
@@ -365,6 +365,7 @@
     <Content Include="Views\Admin\AdminCategories.cshtml" />
     <Content Include="Views\Admin\AdminNews.cshtml" />
     <Content Include="Views\Admin\ActivateUser.cshtml" />
+    <Content Include="Views\Home\Unauthorised.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
